VM options for JavaFX on JDK 11