@@ -1,1 +1,6 @@
 # j4jdraft
+
+#### VM options для запуска проектов JavaFX на JDK 11
+
+--module-path c:\path-to-javafx\javafx-sdk-11\lib  
+--add-modules=javafx.controls,javafx.fxml
